--- a/ontinuance.html
+++ b/ontinuance.html
@@ -96,7 +96,7 @@
     <div class="col-12">
       <div class="grid_row">
         <div style="border-top: 1px solid" class="row">
-          <div class="col-1"><small>予定</small></div>
+          <div class="col-1"><small>🗓</small></div>
           <div class="col-2"><small>年号</small></div>
           <div class="col-2"><small>月日</small></div>
           <div class="col-2"><small>時間</small></div>
@@ -141,7 +141,7 @@
     <div class="col-12">
       <div class="grid_row">
         <div class="row">
-          <div class="col-1"><small>予定</small></div>
+          <div class="col-1"><small>⚪︎</small></div>
           <div class="col-2"><small>年号</small></div>
           <div class="col-2"><small>月日</small></div>
           <div class="col-2"><small>時間</small></div>
@@ -154,7 +154,7 @@
     <div class="col-12">
       <div class="grid_row">
         <div class="row toybox">
-          <div class="col-1"><small>🗓</small></div>
+          <div class="col-1"><small>⚪︎</small></div>
           <div class="col-2"><small>20XX</small></div>
           <div class="col-2"><small>02/01</small></div>
           <div class="col-2"><small>00:00</small></div>
