--- a/ontinuance.html
+++ b/ontinuance.html
@@ -125,11 +125,12 @@
             <div class="media-body">
               <iframe class="img-responsive center-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6134517802675!2d139.7139682546036!3d35.563247688075876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018605c93e2a23f%3A0xc356e55918383f04!2z44OJ44Oz44O744Kt44Ob44O844OGIOiSsueUsOmnheWJjeW6lw!5e0!3m2!1sja!2sus!4v1609316004077!5m2!1sja!2sus" width="1096"> </iframe>
               <h5 class="mt-3">テスト：集合場所</h5>
-              <small>テスト：ドン・キホーテ 蒲田駅前店</small>
-              <small>今年も残すとこ残りわずかとなりました。<br>
-                今年はヒカル氏にお世話になりっぱなしでした、去年一昨年と、方々にご迷惑をおかけしながらも、落書きを通して知り合った人ばかりでして、
-                昔からの付き合いがある方達がいない為、取り扱い説明書が難しいと思われますが、何卒来年もよろしくお願いいたいます。
-                テストテスト！！
+              <small>テスト：ネット場</small>
+              <small>今年も残すところ残りわずかとなりました。<br>
+                今年の後半から現在にかけてヒカル氏と企画を立てて、今の現状にいたり昨今のインスタグラムによっての繋がりと落書きという繋がりを考えて読み物として、尚且つ紙媒体としてなどに落とし込めればと粉骨している次第です。
+                私はメーカーズムーブメントというキーワードを手掛かりに現在DIYではできない物として造形表現を３Dプリンター（以下より、プリンターとします。）に投影する事でDAUBERを設計から造形をする事ができました。
+                しかし現状プリンターの問題があり、世間一般に広まっていない概念を提供して、品質が一定な形で提供できないのではという壁にぶつかり、業者側が使っているプリンターではなく、一般家庭用での積層工法の設定する事で業者が使用しているプリンターには劣るが金型造形という中間作業を中抜きができる事で世間には存在しない私個人が所有できる新しい素材が突如として存在するというのは落書きの概念に近いと私は思うわけで、実際、金型から造形を作るメリットとデメリットに関してはコストの問題、特に試行錯誤という試作品を着手する事が容易にするというのは固定概念として造形という言葉によって一般社会からすると、そもそもミリ単位での調整を絶対にして製造ラインを確立して販売という概念ではなく、落書きという概念に近く、簡素ではあるが一般社会には提供できないが周囲に対しての創造性を誘発する事は可能なのではないかという事が言葉としてお伝えできる内容なのではないか？もしくは共有できる事柄なのだとも思います。
+                今年の節目をここに書き残すのですが、最近奈良にある益田岩船が気になるわけで、何しろ今年はコロナの影響で散々でしたがみなさんはいかがでしたか？
               </small>
             </div>
           </div>
