--- a/ontinuance.html
+++ b/ontinuance.html
@@ -129,7 +129,7 @@
               <small>今年も残すところ残りわずかとなりました。<br>
                 今年の後半から現在にかけてヒカル氏と企画を立てて、今の現状にいたり昨今のインスタグラムによっての繋がりと落書きという繋がりを考えて読み物として、尚且つ紙媒体としてなどに落とし込めればと粉骨している次第です。
                 私はメーカーズムーブメントというキーワードを手掛かりに現在DIYではできない物として造形表現を３Dプリンター（以下より、プリンターとします。）に投影する事でDAUBERを設計から造形をする事ができました。
-                しかし現状プリンターの問題があり、世間一般に広まっていない概念を提供して、品質が一定な形で提供できないのではという壁にぶつかり、業者側が使っているプリンターではなく、一般家庭用での積層工法の設定する事で業者が使用しているプリンターには劣るが金型造形という中間作業を中抜きができる事で世間には存在しない私個人が所有できる新しい素材が突如として存在するというのは落書きの概念に近いと私は思うわけで、実際、金型から造形を作るメリットとデメリットに関してはコストの問題、特に試行錯誤という試作品を着手する事が容易にするというのは固定概念として造形という言葉によって一般社会からすると、そもそもミリ単位での調整を絶対にして製造ラインを確立して販売という概念ではなく、落書きという概念に近く、簡素ではあるが一般社会には提供できないが周囲に対しての創造性を誘発する事は可能なのではないかという事が言葉としてお伝えできる内容なのではないか？もしくは共有できる事柄なのだとも思います。
+                しかし現状プリンターの問題があり、世間一般に広まっていない概念を提供して、品質が一定な形で提供できないのではという壁にぶつかり、業者側が使っているプリンターではなく、一般家庭用のプリンターで積層工法の設定をする事で、業者が使用しているプリンターには劣るが、金型造形という中間作業を中抜きができ、世間には存在しない私個人が所有できる新しい道具が突如として存在するというのは落書きの概念に近いと私は思うわけで、金型から造形を作るメリットとデメリットに関してはコストの問題、特に試行錯誤という試作品を着手する事が難しいという事、さらに固定概念として造形という言葉によって一般社会からすると、そもそもミリ単位での調整を絶対にして製造ラインを確立して販売という概念ではなく、落書きという概念に近く、簡素であり、一般社会には提供できないが周囲に対しての創造性を誘発する事は可能なのではないかという事が言葉としてお伝えできる内容なのではないか？もしくは共有できる事柄なのだとも思います。
                 今年の節目をここに書き残すのですが、最近奈良にある益田岩船が気になるわけで、何しろ今年はコロナの影響で散々でしたがみなさんはいかがでしたか？
               </small>
             </div>
