--- a/ontinuance.html
+++ b/ontinuance.html
@@ -128,6 +128,8 @@
               <small>テスト：ネット場</small>
               <small>今年も残すところ残りわずかとなりました。<br>
                 お疲れ様です。
+                路上観察は最近してません。
+
                 <!-- 今年の後半から現在にかけてヒカル氏と企画を立てて、今の現状にいたり昨今のインスタグラムによっての繋がりと落書きという繋がりを考えて読み物として、尚且つ紙媒体としてなどに落とし込めればと粉骨している次第です。
                 私はメーカーズムーブメントというキーワードを手掛かりに現在DIYではできない物として造形表現を３Dプリンター（以下より、プリンターとします。）に投影する事でDAUBERを設計から造形をする事ができました。
                 しかし現状プリンターの問題があり、世間一般に広まっていない概念を提供して、品質が一定な形で提供できないのではという壁にぶつかり、業者側が使っているプリンターではなく、一般家庭用のプリンターで積層工法の設定をする事で、業者が使用しているプリンターには劣るが、金型造形という中間作業を中抜きができ、世間には存在しない私個人が所有できる新しい道具が突如として存在するというのは落書きの概念に近いと私は思うわけで、金型から造形を作るメリットとデメリットに関してはコストの問題、特に試行錯誤という試作品を着手する事が難しいという事、さらに固定概念として造形という言葉によって一般社会からすると、そもそもミリ単位での調整を絶対にして製造ラインを確立して販売という概念ではなく、落書きという概念に近く、簡素であり、一般社会には提供できないが周囲に対しての創造性を誘発する事は可能なのではないかという事が言葉としてお伝えできる内容なのではないか？もしくは共有できる事柄なのだとも思います。
@@ -202,7 +204,7 @@
               <h5 class="mt-3">集合場所：全世界規模</h5>
               <small>名目：宝探し</small>
               <small>概要<br>
-                宝の地図を作成するのはAIに任せて愛骨のアプリケーションを活用して宝を探す。
+                宝の地図を作成するのはAIに任せてスマートフォンを活用して宝を探す。
                 今後予定開発できないので今はむり
               </small>
             </div>
@@ -249,9 +251,9 @@
   <script src="js/crime.js"></script>
   <!-- <script src="js/tiltfx.js"></script> -->
 
-  <!-- <script src="js/addons/p5.js"></script>
+  <script src="js/addons/p5.js"></script>
   <script src="js/addons/p5.min.js"></script>
-  <script src="js/addons/sketch.js"></script> -->
+  <script src="js/addons/map.js"></script>
 
 </body>
 </html>
