--- a/ontinuance.html
+++ b/ontinuance.html
@@ -253,6 +253,7 @@
 
   <script src="js/addons/p5.js"></script>
   <script src="js/addons/p5.min.js"></script>
+  <script src="js/addons/p5.riso.js"></script>
   <script src="js/addons/map.js"></script>
 
 </body>
