--- a/ontinuance.html
+++ b/ontinuance.html
@@ -251,10 +251,8 @@
   <script src="js/crime.js"></script>
   <!-- <script src="js/tiltfx.js"></script> -->
 
-  <script src="js/addons/p5.js"></script>
-  <script src="js/addons/p5.min.js"></script>
-  <script src="js/addons/p5.riso.js"></script>
-  <script src="js/addons/map.js"></script>
+  <!-- <script src="js/addons/p5.js"></script>
+  <script src="js/addons/p5.min.js"></script> -->
 
 </body>
 </html>
