--- a/project.html
+++ b/project.html
@@ -95,7 +95,7 @@
   <!--content start-->
   <!--text-->
   <div class="container">
-    <a href="dauber.html">
+    <!--<a href="dauber.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div style="border-top: 1px solid" class="row">
@@ -105,12 +105,12 @@
           </div>
         </div>
       </div>
-    </a>
+    </a> -->
     <a href="Sketch.html">
       <div class="col-md-12">
         <div class="grid_row">
           <div class="row toybox">
-            <div class="col-1"><small>02</small></div>
+            <div class="col-1"><small>01</small></div>
             <div class="col-2"><small>2020</small></div>
             <div class="col-6"><small>Sketch</small></div>
           </div>
