--- a/project.html
+++ b/project.html
@@ -109,7 +109,7 @@
     <a href="Sketch.html">
       <div class="col-md-12">
         <div class="grid_row">
-          <div class="row toybox">
+          <div style="border-top: 1px solid" class="row ">
             <div class="col-1"><small>01</small></div>
             <div class="col-2"><small>2020</small></div>
             <div class="col-6"><small>Sketch</small></div>
