--- a/project.html
+++ b/project.html
@@ -32,8 +32,8 @@
               </ul>
             </div>
           </li>
-          <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
-          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
+          <!-- <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
+          <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li> -->
           <!--<li></li>-->
         </ul>
       </div>
