--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header">
+        <!-- <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-        </div>
+        </div> -->
         <div class="modal-body" style="padding:10px 10px 0px 10px;">
           <!--end-->
 
