--- a/automaton.html
+++ b/automaton.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja" dir="ltr" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:mixi="http://mixi-platform.com/ns#">
-
-<!-- 🧠 start -->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,14 +9,11 @@
   <link href="css/crime.css" rel="stylesheet">
   <link href="css/menu.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/v4-shims.css">
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/v4-shims.css">
 </head>
-<!-- 🧠 end -->
-<!-- ☠️ start -->
 <body id="bg">
-  <!-- /header -->
   <header id="header">
     <div class="container">
       <div id="logo">
@@ -26,7 +21,7 @@
       </div>
       <div class="navbar">
         <ul class="list-inline">
-          <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"><span>menu</span></a>
+          <li class="folder"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>menu</span></a>
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
@@ -35,20 +30,22 @@
                 <li><a class="dropdown-item" href="project.html">
                     <p>project</p>
                   </a></li>
-                <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
+                <!--<li><a class="dropdown-item" href="#">Another action</a>-->
+                <li>
               </ul>
             </div>
           </li>
           <li><a href="https://www.instagram.com/DauberSide/"><span class="fab fa-instagram"></span><a></li>
           <li><a data-toggle="modal" data-target="#squarespaceModal"><span class="far fa-envelope"></span></a></li>
+
           <!--<li></li>-->
         </ul>
       </div>
     </div>
   </header>
   <!-- /header -->
-
-  <!-- modal fade goes here -->
+  <!-- line modal -->
+  <!--start-->
   <div class="modal fade" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -56,6 +53,9 @@
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
         </div> -->
         <div class="modal-body" style="padding:10px 10px 0px 10px;">
+          <!--end-->
+
+          <!-- content goes here -->
           <div class="form-area">
             <form role="form" action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSf2tU3FCb0KWeNMbskNq9zIGKlq9k60cveLlBKx3XUOyW-Eew/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
               <div class="form-group">
@@ -86,23 +86,23 @@
             </form>
             <script type="text/javascript">var submitted = false;</script>
             <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='contact/thanks-page.html';}"></iframe>
+            <!-- content goes here -->
           </div>
         </div>
       </div>
+      <!--end-->
+      <!--iframeにリダイレクトかける。-->
+
+      <!-- content goes here end-->
     </div>
   </div>
-
-
+  <!--end-->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/crime.js"></script>
 
-
   <script src="js/addons/p5.js"></script>
-
-  <script src="js/addons/sketch.js"></script>
-
+  <script src="js/addons/automaton.js"></script>
 </body>
-<!-- ☠️ end -->
 </html>
