--- a/project.html
+++ b/project.html
@@ -120,7 +120,7 @@
     <a href="automaton.html">
       <div class="col-md-12">
         <div class="grid_row">
-          <div class="row toybox">
+          <div class="row">
             <div class="col-1"><small>🗒</small></div>
             <div class="col-2"><small>2021</small></div>
             <div class="col-6"><small>automaton</small></div>
