--- a/test.html
+++ b/test.html
@@ -136,8 +136,8 @@
     <script src="js/tiltfx.js"></script>
 
     <script src="js/addons/p5.js"></script>
-    <script src="js/addons/p5.riso.js"></script>
-    <script src="js/addons/sketch_jai.js"></script>
+    <script src="js/addons/sketch.js"></script>
+
 
 </body>
 </html>
