--- a/test.html
+++ b/test.html
@@ -136,7 +136,7 @@
     <script src="js/tiltfx.js"></script>
 
     <script src="js/addons/p5.js"></script>
-    <script src="js/addons/sketch.js"></script>
+    <script src="js/addons/spray.js"></script>
 
 
 </body>
