--- a/product.html
+++ b/product.html
@@ -112,8 +112,8 @@
   <!-- modal fade goes here end-->
 
   <!-- main goes here start-->
-  <div class="">
-  </div>
+
+  <iframe src="https://kiwiirc.com/client/https://xn--tu8hz2e.tk//?nick=dauber|?&theme=cli#dauber" style="border:0; width:100%; height:450px;"></iframe>
   <!-- main goes here goal-->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
