--- a/dauber.html
+++ b/dauber.html
@@ -152,9 +152,9 @@
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-2 toybox"><small>:></small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1ablcbmZs1cobThZsAdpHwmbmn18ht7Ih"><small>Download:ver1.1;</small></a>
+                <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"><small>Download</small></a>
               </div>
             </div>
             <!-- <div class="row toybox">
