--- a/dauber.html
+++ b/dauber.html
@@ -150,12 +150,14 @@
             </div>
 
             <div class="row toybox">
+              <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a>
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>:></small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"><small>Download</small></a>
+                <small>Download</small>
               </div>
+              </a>
             </div>
             <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
