--- a/dauber.html
+++ b/dauber.html
@@ -150,14 +150,12 @@
             </div>
 
             <div class="row toybox">
-              <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a>
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>:></small></div>
               <div class="col-3 toybox">
-                <small>Download</small>
+                <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a><small>Download</small></a>
               </div>
-              </a>
             </div>
             <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
