--- a/dauber_en.html
+++ b/dauber_en.html
@@ -155,88 +155,96 @@
             </div>
 
             <div class="row toybox">
-              <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a>
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>:></small></div>
               <div class="col-3 toybox">
-                <small>Download</small>
+                <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a><small>Download</small></a>
               </div>
-              </a>
             </div>
-            <!--text-->
-
-            <div class="col-md-6">
-
-              <!--carousel-custom-->
-
-              <div id="carousel-custom" class="carousel slide" data-ride="carousel">
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                  <div class="item active">
-                    <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                  </div>
-                  <div class="item ">
-                    <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                  </div>
-                  <div class="item ">
-                    <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
-                  </div>
-                </div>
-
-                <!-- Controls -->
-                <!---->
-                <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-                  <!--<span class="fas fa-arrow-left"></span>-->
-                </a>
-                <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-                  <!--<span class="fas fa-arrow-right"></span>-->
-                </a>
-                <!---->
-
-
-                <!-- Indicators start-->
-                <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-              <li data-target="#carousel-custom" data-slide-to="0" class="active">
-                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
-              </li>
-              <li data-target="#carousel-custom" data-slide-to="1">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
-              </li>
-              <li data-target="#carousel-custom" data-slide-to="2">
-                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
-              </li>
-            </ol>-->
-                <!--Indicators end-->
-              </div>
-
-              <!--carousel-custom-->
-            </div>
-          </div>
-
-        </div>
-
-        <!--productNav start-->
-        <div id="main">
-          <div class="container">
-            <div id="productNav_footer" class="col-md-12">
-              <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-            </div>
+            <!-- <div class="row toybox">
+                      <div class="col-3 toybox"><small>"R40”</small></div>
+                      <div class="col-3 toybox"><small>1:1</small></div>
+                      <div class="col-2 toybox"><small>STL</small></div>
+                      <div class="col-3 toybox">
+                        <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
+                      </div>
+                    </div> -->
           </div>
         </div>
-        <!--productNav end-->
+        <!--text-->
 
+        <div class="col-md-6">
+
+          <!--carousel-custom-->
+
+          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+              <div class="item ">
+                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <!---->
+            <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+              <!--<span class="fas fa-arrow-left"></span>-->
+            </a>
+            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+              <!--<span class="fas fa-arrow-right"></span>-->
+            </a>
+            <!---->
+
+
+            <!-- Indicators start-->
+            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+                        <li data-target="#carousel-custom" data-slide-to="0" class="active">
+                          <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                        </li>
+                        <li data-target="#carousel-custom" data-slide-to="1">
+                          <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                        </li>
+                        <li data-target="#carousel-custom" data-slide-to="2">
+                          <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
+                        </li>
+                      </ol>-->
+            <!--Indicators end-->
+          </div>
+
+          <!--carousel-custom-->
+        </div>
       </div>
 
-      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <!-- Include all compiled plugins (below), or include individual files as needed -->
-      <script src="js/crime.js"></script>
-      <script src="js/tiltfx.js"></script>
-      <script>
-        $(document).ready(function () {
-          $('[data-toggle="tooltip"]').tooltip();
-        });
-      </script>
+    </div>
+
+    <!--productNav start-->
+    <div id="main">
+      <div class="container">
+        <div id="productNav_footer" class="col-md-12">
+          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+        </div>
+      </div>
+    </div>
+    <!--productNav end-->
+
+  </div>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/crime.js"></script>
+  <script src="js/tiltfx.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
 </body>
 </html>
