--- a/dauber_en.html
+++ b/dauber_en.html
@@ -159,7 +159,7 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>:></small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/file/d/1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"></a><small>Download</small></a>
               </div>
             </div>
             <!-- <div class="row toybox">
