--- a/dauber.html
+++ b/dauber.html
@@ -154,7 +154,7 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>:></small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1eW4My6NbgEwwfWkMmb7EKlr3LiuwYkW0"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1Z36XGW-bnS2ZOkM8trBq-2ODIm-CBcfe?usp=sharing"><small>Download</small></a>
               </div>
             </div>
             <!-- <div class="row toybox">
