--- a/dauber.html
+++ b/dauber.html
@@ -152,7 +152,7 @@
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL File :></small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
               </div>
@@ -160,7 +160,7 @@
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>Ender File :></small></div>
+              <div class="col-2 toybox"><small>Gcode</small></div>
               <div class="col-3 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1kSqdAPFoCiLDpNLowPzPIJiV4NtbDzcK"><small>Download</small></a>
               </div>
