--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -111,7 +111,7 @@
                 <font>Dauber</font>
               </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
-            <p><font >2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
+            <p><font>2004年スウェーデンのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限りDIYマーカーとその背景について記録された唯一の書籍である。
             DIYマーカーとは、グラフィティを行うライターたちが路上でタギング(サイン)の個性を競う経緯を経て制作されるようになったツールで、
             彼らは既存のペンやマーカーの改造、靴磨きや車用のポリッシャーのような別用途である製品の流用、自己制作等を行い、それぞれの自己流マーカーを作るという行為を行ってきた。
@@ -148,23 +148,25 @@
               <div class="col-3 "><small>Scale</small></div>
               <div class="col-2"><small>Date</small></div>
             </div>
-
+            <!--target staryt-->
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>STL</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
-              </div>
-            </div>
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>Gcode</small></div>
+              <div class="col-2 toybox"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">norma：Magic ink</a></small></div>
               <div class="col-3 toybox">
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1kSqdAPFoCiLDpNLowPzPIJiV4NtbDzcK"><small>Download</small></a>
               </div>
             </div>
+            <!--target end-->
+
+            <!--target  collapseExample stary-->
+            <div id="collapseExample" class="toybox">
+              <div class="col-md-6">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1kSqdAPFoCiLDpNLowPzPIJiV4NtbDzcK"><small>Download</small></a>
+              </div>
+            </div>
+            <!--target  collapseExample -->
+
             <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
