--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -149,13 +149,9 @@
               <div class="col-2"><small>Date</small></div>
             </div>
             <!--target staryt-->
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">norma：Magic ink</a></small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1kSqdAPFoCiLDpNLowPzPIJiV4NtbDzcK"><small>Download</small></a>
-              </div>
+            <div data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" class="row toybox">
+              <div class="col-3 toybox"><small>"norma”</small></div>
+              <div class="col-3 toybox"><small>Magic ink</small></div>
             </div>
             <!--target end-->
 
