--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -142,16 +142,13 @@
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
           </div>
-          <div class="grid_row">
+
+          <!--target staryt-->
+          <div data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" class="grid_row">
             <div class="row">
-              <div class="col-3"><small>Size</small></div>
-              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-3"><small>"norma”</small></div>
+              <div class="col-3 "><small>Magic ink</small></div>
               <div class="col-2"><small>Date</small></div>
-            </div>
-            <!--target staryt-->
-            <div data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" class="row toybox">
-              <div class="col-3 toybox"><small>"norma”</small></div>
-              <div class="col-3 toybox"><small>Magic ink</small></div>
             </div>
             <!--target end-->
 
