--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -144,11 +144,10 @@
           </div>
 
           <!--target staryt-->
-          <div data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" class="grid_row">
+          <div class="grid_row">
             <div class="row">
               <div class="col-3"><small>"norma”</small></div>
-              <div class="col-3 "><small>Magic ink</small></div>
-              <div class="col-2"><small>Date</small></div>
+              <div class="col-3 "><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
             </div>
             <!--target end-->
             <!--target  collapseExample stary-->
@@ -157,6 +156,14 @@
                 <div class="col-3"><small>Size</small></div>
                 <div class="col-3 "><small>Scale</small></div>
                 <div class="col-2"><small>Date</small></div>
+              </div>
+              <div class="row ">
+                <div class="col-3 toybox"><small>"R40”</small></div>
+                <div class="col-3 toybox"><small>1:1</small></div>
+                <div class="col-2 toybox"><small>Blender</small></div>
+                <div class="col-3 toybox">
+                  <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
+                </div>
               </div>
               <div class="row ">
                 <div class="col-3 toybox"><small>"R40”</small></div>
