--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -151,29 +151,29 @@
             </div>
           </div>
           <!--target end-->
-          <!--target  collapseExample stary-->
-          <div id="collapseExample" class="collapse">
-            <div class="grid_row">
-              <div class="row toybox">
-                <div class="col-3"><small>Size</small></div>
-                <div class="col-3 "><small>Scale</small></div>
-                <div class="col-2"><small>Date</small></div>
+        </div>
+        <!--target  collapseExample stary-->
+        <div id="collapseExample" class="col-md-6 collapse">
+          <div class="grid_row">
+            <div class="row toybox">
+              <div class="col-3"><small>Size</small></div>
+              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-2"><small>Date</small></div>
+            </div>
+            <div class="row ">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
               </div>
-              <div class="row ">
-                <div class="col-3 toybox"><small>"R40”</small></div>
-                <div class="col-3 toybox"><small>1:1</small></div>
-                <div class="col-2 toybox"><small>Blender</small></div>
-                <div class="col-3 toybox">
-                  <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
-                </div>
-              </div>
-              <div class="row ">
-                <div class="col-3 toybox"><small>"R40”</small></div>
-                <div class="col-3 toybox"><small>1:1</small></div>
-                <div class="col-2 toybox"><small>STL</small></div>
-                <div class="col-3 toybox">
-                  <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
-                </div>
+            </div>
+            <div class="row ">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
               </div>
             </div>
           </div>
