--- a/dauber.html
+++ b/dauber.html
@@ -143,8 +143,8 @@
             </div>
             <!--target staryt-->
             <div class="row">
-              <div class="col-3"><small>"norma”</small></div>
-              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
+              <div class="col-3"><small>Product</small></div>
+              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">”Magic ink”</a></small></div>
             </div>
             <!--target end-->
           </div>
@@ -163,7 +163,7 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>Blender</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>”Download”</small></a>
               </div>
             </div>
             <div class="row toybox">
@@ -171,7 +171,15 @@
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>”Download”</small></a>
+              </div>
+            </div>
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>G-code</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1PVPJqS4BOEekwUgLX082Kea0SkcO2n_F"><small>”Download”</small></a>
               </div>
             </div>
           </div>
