--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -259,7 +259,7 @@
         </div>
       </div>
 
-      <div id="collapseExample" class="grid_row collapse">
+      <div id="collapseExample02" class="grid_row collapse">
         <div class="row">
           <div class="media">
             <div class="media-body">
