--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -249,8 +249,7 @@
     </div>
     <!--productNav end-->
     <!--start-->
-    <div style="padding-top: 20px;" class="col-md-12"></div>
-    <div class="col-12">
+    <div class="col-md-12">
       <div class="grid_row">
         <div class="row">
           <div class="col-1"><small>🗓</small></div>
@@ -262,7 +261,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12">
+    <div class="col-md-12">
       <div class="grid_row">
         <div class="row toybox">
           <div class="col-1"><small>🗓</small></div>
@@ -274,7 +273,7 @@
         </div>
       </div>
     </div>
-    <div id="collapseExample02" class="col-12 collapse">
+    <div id="collapseExample02" class="col-md-12 collapse">
       <div class="grid_row">
         <div class="row">
           <div class="media">
