--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -283,7 +283,7 @@
                 <h5 class="mt-3">HOWTOO：マジックインクとペイントマーカー</h5>
                 <small>💡：マッシュアップする方法</small>
                 <small>ペイントマーカーに付属している。インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせて成立させる。
-                  上記写真を参考にDIYとしての役割とメイカーズの役割を楽しんでもらえればと思う。
+                  写真は改めて投稿します。
                 </small>
               </div>
             </div>
