--- a/dauber.html
+++ b/dauber.html
@@ -283,7 +283,7 @@
           </div>
         </div>
       </div>
-      <!--start-->
+      <!--start
       <div id="collapseExample02" class="col-md-12 collapse">
         <div class="grid_row">
           <div class="row">
@@ -291,9 +291,10 @@
               <div class="media-body">
                 <div class="col-md-12">
                   <div class="inner cover">
-                    <h1 class="cover-heading"><font>HOWTOO：マジックインクとペイントマーカー</font></h1>
+                    <h1 class="cover-heading"><font>マジックインク補充液とペイントマーカー</font></h1>
                     <p><font>💡：マッシュアップする方法</font></p>
-                    <small>ペイントマーカーに付属している。インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを成立させる。
+                    <small>ペイントマーカーに付属している。
+                      インク射出部分を補充用のマジックインキへ射出部分を装着する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを成立させる。
                       写真は改めて投稿します。
                     </small>
                   </div>
@@ -303,7 +304,7 @@
           </div>
         </div>
       </div>
-      <!--end-->
+      end-->
     </div>
   </div>
   <!--end-->
