--- a/dauber.html
+++ b/dauber.html
@@ -257,7 +257,7 @@
       </div>
     </div>
     <!--productNav end-->
-    <!--start-->
+    <!--start
     <div class="container">
       <div class="col-md-12">
         <div class="grid_row">
@@ -283,7 +283,8 @@
           </div>
         </div>
       </div>
-      <!--start
+      end-->
+    <!--start
       <div id="collapseExample02" class="col-md-12 collapse">
         <div class="grid_row">
           <div class="row">
@@ -305,7 +306,7 @@
         </div>
       </div>
       end-->
-    </div>
+  </div>
   </div>
   <!--end-->
   </div>
