--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -197,13 +197,13 @@
           <div id="carousel-custom" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-              <div class="item_0 active">
-                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              <div class="item active">
+                <img src="https://i.pinimg.com/originals/f7/4d/4c/f74d4c7c4179c811a40e9ff56531acba.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
-              <div class="item_0 ">
+              <div class="item ">
                 <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
-              <div class="item_0 ">
+              <div class="item ">
                 <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
@@ -309,14 +309,14 @@
           <div id="carousel-custom" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-              <div class="item_00 active">
+              <div class="item active">
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
-              <div class="item_00 ">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              <div class="item">
+                <img src="https://i.pinimg.com/originals/ad/28/5b/ad285bb04cefd3a62a90ebced869af30.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
-              <div class="item_00 ">
-                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+              <div class="item">
+                <img src="https://i.pinimg.com/564x/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
               </div>
             </div>
 
