--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -194,7 +194,7 @@
 
           <!--carousel-custom-->
 
-          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+          <div id="carousel-custom001" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
@@ -306,7 +306,7 @@
 
           <!--carousel-custom-->
 
-          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+          <div id="carousel-custom002" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
