--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -143,8 +143,8 @@
             </div>
             <!--target staryt-->
             <div class="row">
-              <div class="col-3"><small>"norma”</small></div>
-              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
+              <div class="col-3"><small>"👀👀👀”</small></div>
+              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Japan PetBottle</a></small></div>
             </div>
             <!--target end-->
           </div>
@@ -303,7 +303,7 @@
                   </font></p>
           </div>
         </div>
-        <!--text-->
+        <!--text start
         <div class="col-md-6">
           <div class="grid_row">
             <div style="border-top: 1px solid" class="row">
@@ -317,15 +317,14 @@
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
-            <!--target staryt-->
             <div class="row">
               <div class="col-3"><small>"norma”</small></div>
               <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
             </div>
-            <!--target end-->
           </div>
 
         </div>
+        text end-->
         <!--target  collapseExample stary-->
         <div id="collapseExample" class="col-md-6 collapse">
           <div class="grid_row">
