--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -288,10 +288,13 @@
                     </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
             <p>
-              <font>DIYとメーカーズムーブメントを通って、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを作成し、流用する形になった。
-              タイトルにあるマジックインクという製品は古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物、もう一点流用したのがペイントマーカー。
+              <font>DIYとメーカーズムーブメントを通って、本来組み合わせての使用を目的としていない複数の製品を組み合わせてDAUBERを作成し、流用する事ができた。
+                実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、名称として使っている。
+              蛇足になったが、本題のタイトルにある通りマジックインクという製品。
+              知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物、そしてもう一点の流用したのがペイントマーカー。
               1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
-              二つの製品は比較的に容易に入手が可能で本来は製品を組み合わせる事を想定していない、なのでジョイント部分となる、ねじ切り箇所に合わせたインクホルダーを作る事で本来組み合わせる事ない製品を流用することになった。
+              二つの製品は比較的に容易に入手が可能で本来は製品を組み合わせる事を想定していない、なのでジョイント部分となる、ねじ切り箇所に合わせたインクホルダーを作る事で本来組み合わせる事ない製品を組み合わせて出来上がっている。
+
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
               </font>
             </p>
@@ -369,10 +372,10 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="https://i.pinimg.com/originals/00/60/2d/00602d8d05949c2fe71ab61399e650ea.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/00/60/2d/00602d8d05949c2fe71ab61399e650ea.jpg" alt="..." class="img-responsive center-block" height="300" width="300">
               </div>
               <div class="item ">
-                <img src="https://i.pinimg.com/originals/99/14/e8/9914e835428bbc73f25ba3b93789201a.jpg" alt="..." class="img-responsive center-block" height="600" width="600">
+                <img src="https://i.pinimg.com/originals/99/14/e8/9914e835428bbc73f25ba3b93789201a.jpg" alt="..." class="img-responsive center-block" height="300" width="300">
               </div>
             </div>
 
