--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -287,15 +287,19 @@
                     </h1>
             <p><small>Language:JP/<a href="dauber_en.html">EN</a></small></p>
             <p>
-              <font>DIYとメーカーズムーブメントを通って、A5pressからKingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてメイカームーブメントというデジタルツールを用いて、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、DAUBERという塗布具のプロジェクトを進めている。
-                実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、プロジェクトの名称として使用しているのは悪しからず流していただければとありがたい。
-              何しろ、蛇足になったが本題のタイトルにある通りマジックインクという製品。
-              知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点の流用したのがペイントマーカー。
-              1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
-              二つの製品は比較的に容易に入手が可能で本来は製品を組み合わせる事を想定していない、なのでジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。
-              丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味が発揮できない事も考慮して50mmのサイズに変更した。
+              <font>DIYとメーカーズムーブメントを通って、A5pressからKingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてメイカームーブメントというデジタルツールを用いて、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、Dauberという塗布具のプロジェクトを進めている。
+                補足だが、実際は、Dauberの部品箇所は液体用のバルブを指しているのだが、流体部分の名称を拝借したままプロジェクトの名称として使用している。
+                話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
+              早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー、このサイトを知っているのだから説明する必要もない代物であって知らない人はすぐにでもサイトを閉じるべきだ。
+              今回流用したのは以下に点の箇所、1.マジックインクの流用箇所はインク補充容器、2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
+              ぱっぱと進めるが、二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
+              なので存在しない塗布部分をメイカーズムーブメントという概念を取り入れて、ジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。
+              概念と言っても、単語を検索する事でそのものが何を指しているのかを共有しやすくするために文章化しているのだが、本来は勝手に３Dでプリントして遊べと言いたいがそれだとプロジェクトにならないようなので、説明している🖕
+              次に丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。
               その際に色々と変更箇所を模索しながらも、Dauberの形態を徐々に変化する事で、今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。
-              つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する機械を組み合わせる事で、2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれるだ。
+              つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する装置が見事にピシャリと組み合わさった。良い成功例なのだと思う。
+              2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
+              デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。
               データは３DのデータとSTL、GCODEは専用の機械に変換すればすぐにでも試作品が入手可能。
               </font>
             </p>
