--- a/dauber.html
+++ b/dauber.html
@@ -299,8 +299,8 @@
                 話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
               早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー、このサイトを知っているのだから説明する必要もない代物であって知らない人はすぐにでもサイトを閉じるべきだ。
               今回以下、二点の箇所を流用した。<br>
-              1.マジックインクの流用箇所はインク補充容器<br>
-              2.ペイントマーカーの流用箇所はバルブ式のインク流入箇所。
+              1.マジックインクのインク補充容器<br>
+              2.ペイントマーカーのインク流体バルブ
               <br>
               ぱっぱと進めるが、二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
               なので存在しない塗布部分をメイカーズムーブメントという概念を取り入れて、ジョイント部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。<br>
